[gd_scene load_steps=8 format=1]

[ext_resource path="res://fonts/font_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://menus/map_title.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/font_64.fnt" type="BitmapFont" id=4]

[sub_resource type="CanvasItemShader" id=1]

_code = {
"fragment": "uniform color Color;
COLOR = tex(TEXTURE, UV) * Color;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/Color = Color( 1, 0.304, 0, 1 )

[sub_resource type="Theme" id=3]

default_font = ExtResource( 4 )

[node name="Main_Menu" type="Control"]

material/material = SubResource( 2 )
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 600.0
script/script = ExtResource( 2 )

[node name="map_sprite" parent="." instance=ExtResource( 3 )]

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 3 )
margin/left = 288.0
margin/top = 50.0
margin/right = 739.0
margin/bottom = 117.0
text = "Pitch Ball Racer"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Start" type="Button" parent="."]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 477.0
margin/top = 122.0
margin/right = 565.0
margin/bottom = 161.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="Quit" type="Button" parent="."]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 481.0
margin/top = 508.0
margin/right = 569.0
margin/bottom = 547.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="map_selector" type="Control" parent="."]

visibility/visible = false
material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 124.0
margin/top = 156.0
margin/right = 899.0
margin/bottom = 468.0

[node name="Label" type="Label" parent="map_selector"]

material/use_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 306.0
margin/top = -37.0
margin/right = 484.0
margin/bottom = -4.0
text = "Select Stage"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScrollContainer" type="ScrollContainer" parent="map_selector"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 775.0
margin/bottom = 312.0
scroll/horizontal = true
scroll/vertical = true

[node name="HBoxContainer" type="HBoxContainer" parent="map_selector/ScrollContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 30
alignment = 0

[node name="Laps" type="Label" parent="."]

visibility/visible = false
material/use_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 326.0
margin/top = 132.0
margin/right = 695.0
margin/bottom = 165.0
text = "Select Number of Rounds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ButtonGroup" type="ButtonGroup" parent="Laps"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -64.0
margin/top = 61.0
margin/right = 431.0
margin/bottom = 101.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Laps/ButtonGroup"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 495.0
margin/bottom = 39.0
custom_constants/separation = 20
alignment = 0

[node name="Lap_1" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "1"
flat = false

[node name="Lap_2" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 71.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "2"
flat = false

[node name="Lap_3" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 91.0
margin/top = 0.0
margin/right = 123.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "3"
flat = false

[node name="Lap_4" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 0.0
margin/right = 176.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "4"
flat = false

[node name="Lap_5" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 196.0
margin/top = 0.0
margin/right = 227.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "5"
flat = false

[node name="Lap_6" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 247.0
margin/top = 0.0
margin/right = 279.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "6"
flat = false

[node name="Lap_7" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 299.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "7"
flat = false

[node name="Lap_8" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 0.0
margin/right = 381.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "8"
flat = false

[node name="Lap_9" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 401.0
margin/top = 0.0
margin/right = 433.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "9"
flat = false

[node name="Lap_10" type="Button" parent="Laps/ButtonGroup/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 453.0
margin/top = 0.0
margin/right = 495.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "10"
flat = false

[node name="Players" type="Label" parent="."]

visibility/visible = false
material/use_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 321.0
margin/top = 195.0
margin/right = 692.0
margin/bottom = 228.0
text = "Select Number of Players"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Players" type="ButtonGroup" parent="Players"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -37.0
margin/top = 57.0
margin/right = 414.0
margin/bottom = 97.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Players/Players"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 451.0
margin/bottom = 39.0
custom_constants/separation = 30
alignment = 0

[node name="1" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "1"
flat = false

[node name="2" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 50.0
margin/top = 0.0
margin/right = 81.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "2"
flat = false

[node name="3" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 111.0
margin/top = 0.0
margin/right = 143.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "3"
flat = false

[node name="4" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 173.0
margin/top = 0.0
margin/right = 206.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "4"
flat = false

[node name="5" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 236.0
margin/top = 0.0
margin/right = 267.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "5"
flat = false

[node name="6" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 297.0
margin/top = 0.0
margin/right = 329.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "6"
flat = false

[node name="7" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 359.0
margin/top = 0.0
margin/right = 390.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "7"
flat = false

[node name="8" type="Button" parent="Players/Players/HBoxContainer"]

material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 420.0
margin/top = 0.0
margin/right = 451.0
margin/bottom = 39.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "8"
flat = false

[node name="Back" type="Button" parent="."]

visibility/visible = false
material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 708.0
margin/top = 511.0
margin/right = 791.0
margin/bottom = 550.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_1" to="." method="_on_Lap_1_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_2" to="." method="_on_Lap_2_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_3" to="." method="_on_Lap_3_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_4" to="." method="_on_Lap_4_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_5" to="." method="_on_Lap_5_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_6" to="." method="_on_Lap_6_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_7" to="." method="_on_Lap_7_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_8" to="." method="_on_Lap_8_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_9" to="." method="_on_Lap_9_button_up"]

[connection signal="button_up" from="Laps/ButtonGroup/HBoxContainer/Lap_10" to="." method="_on_Lap_10_button_up"]

[connection signal="pressed" from="Players/Players/HBoxContainer/1" to="." method="_on_1_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/2" to="." method="_on_2_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/3" to="." method="_on_3_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/4" to="." method="_on_4_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/5" to="." method="_on_5_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/6" to="." method="_on_6_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/7" to="." method="_on_7_pressed"]

[connection signal="pressed" from="Players/Players/HBoxContainer/8" to="." method="_on_8_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


